try clair-scan 0.3

--- a/.tekton/testrepo4-comp1-push.yaml
+++ b/.tekton/testrepo4-comp1-push.yaml
@@ -336,7 +336,7 @@ spec:
         - name: name
           value: clair-scan
         - name: bundle
-          value: quay.io/konflux-ci/tekton-catalog/task-clair-scan:0.2@sha256:893ffa3ce26b061e21bb4d8db9ef7ed4ddd4044fe7aa5451ef391034da3ff759
+          value: quay.io/zxiong/clair-scan:0.3.1
         - name: kind
           value: task
         resolver: bundles
