add matrix to clair-scan

--- a/.tekton/testrepo4-comp1-push.yaml
+++ b/.tekton/testrepo4-comp1-push.yaml
@@ -323,7 +323,12 @@ spec:
         operator: in
         values:
         - "false"
-    - name: clair-scan
+    - matrix:
+        params:
+        - name: image-platform
+          value:
+          - $(params.build-platforms)
+      name: clair-scan
       params:
       - name: image-digest
         value: $(tasks.build-image-index.results.IMAGE_DIGEST)
